<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@drawable/list_backbg_03">
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/setting_settop_regicomp1"
		android:textColor="@color/BLACK" />
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/setting_settop_regicomp2"
		android:textColor="@color/BLACK" />
	<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/setting_settop_regicomp3"
		android:textColor="@color/BLACK" />
</LinearLayout>

